tests/phase1/ast_bad.stderr
tests/phase1/ast_bad.sl:51:51: error: expected expression
