tests/phase1/ast_bad.sl
package demo
fn main() i32 {
    var x i32 = (1 + 2
    return x
}
